Fix invite character component when character name is too long

--- a/src/app/group/group.component.scss
+++ b/src/app/group/group.component.scss
@@ -77,13 +77,22 @@
 }
 
 .invite-character-modal {
+    max-width: 85vw;
+    mat-radio-group {
+        display: flex;
+        flex-direction: column;
+    }
     mat-radio-button {
-        display: block;
+        overflow: hidden;
+        height: 32px;
+        .mat-radio-label-content {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
     mat-card-content {
         display: flex;
         flex-direction: column;
-        align-items: center;
     }
 }
 
